Almost ready for deployment. Need more testing.

--- a/fishpos/res/layout/reporttab.xml
+++ b/fishpos/res/layout/reporttab.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="@string/Fragment3"
+         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,5 +24,12 @@
             android:stretchColumns="*" >
         </TableLayout>
     </ScrollView>
+    
+    <TextView
+         android:id="@+id/outstandingBalance"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="@string/Fragment3"
+         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
