--- a/fishpos/res/layout/activity_add_customer.xml
+++ b/fishpos/res/layout/activity_add_customer.xml
@@ -224,18 +224,19 @@
 
         <Button
             android:id="@+id/addNewCustBtn"
-            style="?android:attr/borderlessButtonStyle"
+            style="@style/btnStyleBlackpearl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="300dp"
+            android:layout_marginRight="20dp"
+            android:width="200dp"
             android:text="@string/Add" />
 
         <Button
             android:id="@+id/clearFieldsAddCustomer"
-            style="?android:attr/borderlessButtonStyle"
+            style="@style/btnStyleBlackpearl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="300dp"
+            android:width="200dp"
             android:text="@string/Clear" />
     </LinearLayout>
 
