--- a/fishpos/res/layout/customertab.xml
+++ b/fishpos/res/layout/customertab.xml
@@ -8,15 +8,36 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
-        <TableLayout
-            android:id="@+id/customerTable"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:shrinkColumns="*"
-            android:stretchColumns="*" >
-        </TableLayout>
+		
+        <LinearLayout
+            android:id="@+id/LinearLayoutCustomers"
+    		android:layout_width="match_parent"
+    		android:layout_height="wrap_content"
+    		android:orientation="vertical">
+            
+            <TableLayout
+	            android:id="@+id/boatTable"
+	            android:layout_width="wrap_content"
+	            android:layout_height="match_parent"
+	            android:padding="1dp"
+	            android:background="#000000"
+	            android:layout_margin="10dp"
+	            android:shrinkColumns="*"
+	            android:stretchColumns="*" >
+        	</TableLayout>
+        	
+            <TableLayout
+	            android:id="@+id/crewTable"
+	            android:layout_width="wrap_content"
+	            android:layout_height="match_parent"
+	            android:padding="1dp"
+	            android:background="#000000"
+	            android:layout_margin="10dp"
+	            android:shrinkColumns="*"
+	            android:stretchColumns="*" >
+        	</TableLayout>
+        
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
