Report sales table by date or boat name

--- a/fishpos/res/layout/activity_add_customer.xml
+++ b/fishpos/res/layout/activity_add_customer.xml
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
@@ -57,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
@@ -80,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
             
             <TextView
@@ -95,6 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
@@ -118,6 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
             
             <TextView
@@ -133,6 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
@@ -156,6 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
             
             <TextView
@@ -171,6 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
@@ -194,6 +202,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
             
             <TextView
@@ -209,6 +218,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </TableRow>
