--- a/fishpos/res/layout/checkouttab.xml
+++ b/fishpos/res/layout/checkouttab.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/checkoutLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -21,14 +21,14 @@
 	        android:id="@+id/tableLayout1"
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="left"
+	        android:layout_gravity="center"
 	        android:layout_weight="2" >
 	        
             <TableRow
 	            android:id="@+id/tableRow4"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	
 	            <TextView
 	                android:id="@+id/uacLabel"
@@ -43,6 +43,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_weight="1"
 	                android:ems="10"
+	                android:imeOptions="actionDone"
 	                android:inputType="numberDecimal" />
 	            
 	            <TextView
@@ -57,7 +58,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:gravity="center_vertical"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	
 	            <TextView
 	                android:id="@+id/boatLabel"
@@ -87,7 +88,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:gravity="center_vertical"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	
 	            <TextView
 	                android:id="@+id/fishTypeLabel"
@@ -108,7 +109,7 @@
 	            android:id="@+id/tableRow3"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	
 	            <TextView
 	                android:id="@+id/pricePerPoundLabel"
@@ -122,6 +123,7 @@
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
 	                android:ems="10"
+	                android:imeOptions="actionDone"
 	                android:inputType="numberDecimal" >
 	                
 	            </EditText>
@@ -130,7 +132,7 @@
 	        <TableRow
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	
 	            <TextView
 	                android:id="@+id/Weight"
@@ -144,6 +146,7 @@
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
 	                android:ems="10"
+	                android:imeOptions="actionDone"
 	                android:inputType="numberDecimal" >
 	                
 	            </EditText>
@@ -162,18 +165,19 @@
         <TableLayout
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="left"
+	        android:layout_gravity="center_horizontal"
 	        android:layout_weight="1" >
 	        
             <TableRow
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	    
 		        <TextView
 			         android:id="@+id/currentDate"
 			         android:layout_width="wrap_content"
 			         android:layout_height="wrap_content"
+			         android:layout_gravity="left"
 			         android:textAppearance="?android:attr/textAppearanceLarge"/>
 	        
 	        </TableRow>
@@ -181,7 +185,7 @@
             <TableRow
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	    
 	        
 	        </TableRow>
@@ -189,11 +193,20 @@
             <TableRow
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
+	    
+	        
+	        </TableRow>
+	        
+            <TableRow
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_margin="20dp" >
 	    
 		        <TextView
 			         android:layout_width="wrap_content"
 			         android:layout_height="wrap_content"
+			         android:layout_gravity="center"
 			         android:text="@string/totalPrice"
 			         android:textAppearance="?android:attr/textAppearanceLarge"/>
 	        
@@ -202,12 +215,13 @@
             <TableRow
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_margin="10dp" >
+	            android:layout_margin="20dp" >
 	    
 		        <TextView
 		            android:id="@+id/totalPrice"
 			         android:layout_width="wrap_content"
 			         android:layout_height="wrap_content"
+			         android:layout_gravity="center"
 			         android:textSize="50sp"
 			         android:textAppearance="?android:attr/textAppearanceLarge"/>
 	        
@@ -227,9 +241,9 @@
     
     <LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="match_parent"
 	    android:layout_margin="50dp"
-	    android:gravity="center_horizontal" >
+	    android:gravity="center" >
 	
 	    <Button
 	        android:id="@+id/checkout"
@@ -237,6 +251,7 @@
 	        android:layout_height="wrap_content"
 	        android:text="@string/Checkout"
 	        style="@style/btnStyleBlackpearl"
+	        android:layout_gravity="bottom"
 	        android:width="300dp" />
 	</LinearLayout>
 
